--- a/snailmail.html
+++ b/snailmail.html
@@ -17,6 +17,6 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/LR2hos1od34" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 		<hr>
-		<a href="./home.html">Home</a>
+		<a href="./index.html">Home</a>
 	</body>
 </html>
