Edit About section text

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   	<link rel="stylesheet" href="./css/default.css">
   </head>
   <body>
-  	Hi! My name is Lauren, and I am an artist and programmer studying in the interdisciplinary Computer Science and Arts program at Carnegie Mellon University.
+  	Hi! My name is Lauren, and I am an artist and programmer in the interdisciplinary Computer Science and Arts program at Carnegie Mellon University.
   	<br><br>
   	Currently, I am interested in DIY culture, especially its anticapitalist, feminist, and queer implications. I live in Dallas, TX and Pittsburgh, PA.
 
