--- a/morningroutine.html
+++ b/morningroutine.html
@@ -7,8 +7,13 @@
 		<link rel="stylesheet" href="./css/default.css">
 	</head>
 	<body>
+		<span class="h1">Morning Routine</span>
+		<hr>
 		This page is under construction.
 		
+		<hr>
+		<video src="./images/morningroutine.mov" width=640 height=360 controls></video>
+
 		<hr>
 		<a href="./index.html">Home</a>
 	</body>
