--- a/morningroutine.html
+++ b/morningroutine.html
@@ -12,7 +12,7 @@
 		This page is under construction.
 		
 		<hr>
-		<video src="./images/morningroutine.mov" width=640 height=360 controls></video>
+		<video src="./images/morningroutine.mp4" width=640 height=360 controls></video>
 
 		<hr>
 		<a href="./index.html">Home</a>
