Incomplete style updates

--- a/about.html
+++ b/about.html
@@ -6,20 +6,34 @@
   	<meta charset="utf-8">
   	<link rel="stylesheet" href="./css/default.css">
   </head>
-  <body>
-  	Hi! My name is Lauren, and I am an artist and programmer in the interdisciplinary Computer Science and Arts program at Carnegie Mellon University.
-  	<br><br>
-  	Currently, I am interested in DIY culture, especially its anticapitalist, feminist, and queer implications. I live in Dallas, TX and Pittsburgh, PA.
 
-  	<hr>
-  	<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>
+  <div class="header">
+    <h2>⌒(•ㅅ•)⌒ Lauren Kung ⌒(•ㅅ•)⌒</h2>
+    [<a href="./index.html">Projects</a>]
+    [<b>About</b>]
+    [<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
+    <hr>
+  </div>
 
-  	<hr>
-  	Around the web: <a href="https://twitter.com/laurenkungaroo">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
-  	<!-- <br>
-  	Last updated... -->
+  <div class="content">
+    Hi! My name is Lauren, and I am an artist and programmer in the interdisciplinary Computer Science and Arts program at Carnegie Mellon University.
+    <br><br>
+    Currently, I am interested in DIY culture, especially its anticapitalist, feminist, and queer implications. I live in Dallas, TX and Pittsburgh, PA.
+  </div>
 
-  	<hr>
-  	<a href="./index.html">Home</a>
-  </body>
+  <div class="footer">
+    <hr>
+    [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
+    [<a href="https://www.linkedin.com/in/laurenku/" target="_blank">LinkedIn</a>]
+    [<a href="https://github.com/laurenku" target="_blank">GitHub</a>]
+    <!-- <br>
+    Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
+    <br>
+    Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+    <br>
+    <br>
+    <i>Last updated September 25, 2022 by Lauren Kung.</i>
+
+  </div>
+  
 </html>
