--- a/arpenguin.html
+++ b/arpenguin.html
@@ -6,10 +6,53 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="./css/default.css">
 	</head>
-	<body>
-		This page is under construction.
-		
+
+  <script>
+    var nameCount = 0;
+    names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92; Lauren Kung /(•ㅅ•)&#92;'];
+    // names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92;   Lauren Kung   /(•ㅅ•)&#92;', '(•ㅅ•)    Lauren Kung    (•ㅅ•)'];
+    const interval = setInterval(function() {
+      document.getElementById('name').innerHTML = names[nameCount%names.length];
+      nameCount++;
+    }, 1000);
+  </script>
+
+  <div class="header">
+	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
+		[<a href="./index.html">Projects</a>]
+		[<a href="./about.html">About</a>]
+		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
 		<hr>
-		<a href="./index.html">Home</a>
-	</body>
+	</div>
+
+		<div class="content" style="text-align:left">
+			<span class="h1">AR Penguin</span>
+
+			Made in collaboration with <a href="https://em1lyngo.wixsite.com/portfolio">Emily Ngo</a>!
+			<br><br>
+			AR Penguin is a mobile app of an augmented reality 3D penguin that follows you around. The penguin is designed to provide a source of comfort for younger users in environments like elementary school where they may be away from their families for the first time and need extra support. To create our project, we generated a random circular path for the penguin to travel in the proximity of the user that updates when they move from place to place. The penguin follows the user with different animations based on their traveling speed.
+			<br><br>
+			Developed with Unity using C# scripting and the ARCore plugin.
+
+			<hr>
+			<iframe width="640" height="360" src="https://www.youtube.com/embed/enibMdTuUuE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+		</div>
+
+		
+		
+		
+		<div class="footer">
+			<hr>
+		  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
+			[<a href="https://www.linkedin.com/in/laurenku/" target="_blank">LinkedIn</a>]
+			[<a href="https://github.com/laurenku" target="_blank">GitHub</a>]
+		  <!-- <br>
+			Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
+			<br>
+			Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+			<br>
+			<br>
+			<i>Last updated September 25, 2022 by Lauren Kung.</i>
+		</div>
 </html>
