--- a/leftovers.html
+++ b/leftovers.html
@@ -2,17 +2,48 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Self portrait</title>
+		<title>Leftovers</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="./css/default.css">
 	</head>
 	
-	<body>
+  <script>
+    var nameCount = 0;
+    names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92; Lauren Kung /(•ㅅ•)&#92;'];
+    // names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92;   Lauren Kung   /(•ㅅ•)&#92;', '(•ㅅ•)    Lauren Kung    (•ㅅ•)'];
+    const interval = setInterval(function() {
+      document.getElementById('name').innerHTML = names[nameCount%names.length];
+      nameCount++;
+    }, 1000);
+  </script>
+
+  <center>
+	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
+		[<a href="./index.html">Projects</a>]
+		[<a href="./about.html">About</a>]
+		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
+	</center>
+	<hr>
+
+	
+
+
+	<div class="content">
 		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:500px;" src="./images/leftovers1.jpg" id="imgClickAndChange">
+		&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:400px;" id="imgClickAndChange" src="./images/leftovers1.jpg">
+
+		<!-- <script>
+	    var imageCount = 0;
+	    images = ["./images/leftovers1.jpg", "./images/leftovers2.jpg", "./images/leftovers3.jpg"];
+	    
+	    const interval = setInterval(function() {
+	      document.getElementById("leftovers").innerHTML = images[imageCount%images.length];
+	      imageCount++;
+	    }, 1000);
+  	</script> -->
 		
 		<script language="javascript">
-			var images = ["./images/leftovers1.jpg", "./images/leftovers2.jpg", "./images/leftovers3.jpg"]
+			var images = ["./images/leftovers1.jpg", "./images/leftovers2.jpg", "./images/leftovers3.jpg"];
 			var imgState = 0;
 			var imgTag = document.getElementById("imgClickAndChange");
 
@@ -21,15 +52,25 @@
 				event.target.src = images[imgState];
 			});
 		</script>
+
 		<br>
 		<br>
 		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:604px;" src="./images/leftovers.jpg">
-		<!-- 
-		<br>
-		<br>
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:604px;" src="./images/selfportrait3.jpg"> -->
+		&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:400px;" src="./images/leftovers.jpg">
 		<p>
-	</body>
+	</div>
+	
+	<hr>
+	<center>
+	  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
+		[<a href="https://www.linkedin.com/in/laurenku/" target="_blank">LinkedIn</a>]
+		[<a href="https://github.com/laurenku" target="_blank">GitHub</a>]
+	  <!-- <br>
+		Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
+		<br>
+		Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+		<br>
+		<br>
+		<i>Last updated September 25, 2022 by Lauren Kung.</i>
+	</center>
 </html>
