--- a/selfportrait.html
+++ b/selfportrait.html
@@ -6,17 +6,51 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="./css/grey.css">
 </head>
-<body>
+
+<script>
+  var nameCount = 0;
+  names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92; Lauren Kung /(•ㅅ•)&#92;'];
+  // names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92;   Lauren Kung   /(•ㅅ•)&#92;', '(•ㅅ•)    Lauren Kung    (•ㅅ•)'];
+  const interval = setInterval(function() {
+    document.getElementById('name').innerHTML = names[nameCount%names.length];
+    nameCount++;
+  }, 1000);
+</script>
+
+<div class="header">
+  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
+	[<a href="./index.html">Projects</a>]
+	[<a href="./about.html">About</a>]
+	[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
+<hr>
+</div>
+
+<div class="content">
 	<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:604px;" src="./images/selfportrait1.jpg">
+	&nbsp;&nbsp;&nbsp;&nbsp;<img style="width:40vw;" src="./images/selfportrait1.jpg">
 	<br>
 	<br>
 	<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:604px;" src="./images/selfportrait2.jpg">
+	&nbsp;&nbsp;&nbsp;&nbsp;<img style="width:40vw;" src="./images/selfportrait2.jpg">
 	<br>
 	<br>
 	<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;<img style="max-width:604px;" src="./images/selfportrait3.jpg">
+	&nbsp;&nbsp;&nbsp;&nbsp;<img style="width:40vw;" src="./images/selfportrait3.jpg">
 	<p>
-</body>
+</div>
+
+<div class="footer">
+<hr>
+	
+	  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
+		[<a href="https://www.linkedin.com/in/laurenku/" target="_blank">LinkedIn</a>]
+		[<a href="https://github.com/laurenku" target="_blank">GitHub</a>]
+	  <!-- <br>
+		Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
+		<br>
+		Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+		<br>
+		<br>
+		<i>Last updated September 25, 2022 by Lauren Kung.</i>
+	</div>
 </html>
