--- a/eggdogextravaganza.html
+++ b/eggdogextravaganza.html
@@ -17,19 +17,21 @@
     }, 1000);
   </script>
 
-  <center>
+  <div class="header">
 	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
 	
 		<hr>
+	</div>
 
-		<body>
+	<div class="content" style="text-align:left">
 			This page is under construction.
 			
-		</body>
+	</div>
 
+	<div class="footer">
 		<hr>
 	
 	  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
@@ -42,5 +44,5 @@
 		<br>
 		<br>
 		<i>Last updated September 25, 2022 by Lauren Kung.</i>
-	</center>
+	</div>
 </html>
