--- a/leftovers.html
+++ b/leftovers.html
@@ -17,14 +17,14 @@
     }, 1000);
   </script>
 
-  <center>
+  <div class="header">
 	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
-	</center>
-	<hr>
-
+	
+		<hr>
+  </div>
 	
 
 
@@ -60,8 +60,9 @@
 		<p>
 	</div>
 	
-	<hr>
-	<center>
+	<div class="footer">
+		<hr>
+	
 	  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
 		[<a href="https://www.linkedin.com/in/laurenku/" target="_blank">LinkedIn</a>]
 		[<a href="https://github.com/laurenku" target="_blank">GitHub</a>]
@@ -72,5 +73,5 @@
 		<br>
 		<br>
 		<i>Last updated September 25, 2022 by Lauren Kung.</i>
-	</center>
+	</div>
 </html>
