--- a/morningroutine.html
+++ b/morningroutine.html
@@ -18,25 +18,26 @@
     }, 1000);
   </script>
 
-  <center>
+  <div class="header">
 	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
-	
 		<hr>
-
+  </div>
+  
 		
-		<body>
-			<span class="h1">Morning Routine</span>
-			
-			This page is under construction.
-			
-			<hr>
-			<video src="./images/morningroutine.mp4" width=640 height=360 controls></video>
+	<div class="content" style="text-align:left">
+		<span class="h1">Morning Routine</span>
+		
+		This page is under construction.
+		
+		<hr>
+		<video src="./images/morningroutine.mp4" width=640 height=360 controls></video>
 
-		</body>
+	</div>
 
+  <div class="footer">
 		<hr>
 		
 	  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
@@ -49,5 +50,5 @@
 		<br>
 		<br>
 		<i>Last updated September 25, 2022 by Lauren Kung.</i>
-	</center>
+	</div>
 </html>
