--- a/colorfulsoundscapes.html
+++ b/colorfulsoundscapes.html
@@ -17,47 +17,50 @@
     }, 1000);
   </script>
 
-  <center>
+  <div class="header">
 	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
 		<hr>
+	</div>
 
-		<div style="text-align:left;width: 50%;margin: 0 auto;">
-			<span class="h1">Colorful Soundscapes</span>
-			
-			Colorful Soundscapes is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of Colorful Soundscapes is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
-			<br><br>
-			This app is hosted on Glitch. <a href="https://glitch.com/edit/#!/colorful-soundscapes">See the project on Glitch</a>.
-		</div>
+	<div class="content" style="text-align:left">
+		<span class="h1">Colorful Soundscapes</span>
+		
+		Colorful Soundscapes is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of Colorful Soundscapes is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
+		<br><br>
+		This app is hosted on Glitch. <a href="https://glitch.com/edit/#!/colorful-soundscapes">See the project on Glitch</a>.
+		
 			
 		<hr>
 		<!-- <video src="./images/colorfulsoundscapes.mp4" style="background:#eee;pointer-events:none" width=640 height=360 controls></video> -->
 		<video src="./images/colorfulsoundscapes.mp4" width=640 height=360 controls></video>
 		
 		<hr>
-		<div style="text-align:left;width: 50%;margin: 0 auto;">	
-			<span class="h3">To use on Google Pixel 4</span>
-			<br>
-			To set up your Google Pixel 4, <a href="https://atap.google.com/soli/sandbox/learn/#tutorial-setup">follow this tutorial on Google ATAP's website</a>.
-			<br><br>
-			Copy this <a href="https://colorful-soundscapes.glitch.me/">URL for the live app</a> to your clipboard.
-			<br><br>
-			Open the <strong>Soli Sandbox app</strong> > <strong>Menu</strong> > enter the URL in the <strong>“Open URL or file”</strong> field.
-			<br><br>
-			Ambiance starts when sensor detects your presence. Reach for the phone at least 3 times to add another layer of ambiance. Swipe up and down to adjust volume. Swipe right to add embellished sounds to the soundscape. Swipe left to generate a new soundscape and color.
-		</div>
+	
+		<span class="h3">To use on Google Pixel 4</span>
+		
+		
+		To set up your Google Pixel 4, <a href="https://atap.google.com/soli/sandbox/learn/#tutorial-setup">follow this tutorial on Google ATAP's website</a>.
+		<br><br>
+		Copy this <a href="https://colorful-soundscapes.glitch.me/">URL for the live app</a> to your clipboard.
+		<br><br>
+		Open the <strong>Soli Sandbox app</strong> > <strong>Menu</strong> > enter the URL in the <strong>“Open URL or file”</strong> field.
+		<br><br>
+		Ambiance starts when sensor detects your presence. Reach for the phone at least 3 times to add another layer of ambiance. Swipe up and down to adjust volume. Swipe right to add embellished sounds to the soundscape. Swipe left to generate a new soundscape and color.
+	
 
 		<hr>
-		<div style="text-align:left;width: 50%;margin: 0 auto;">	
-			<span class="h3">To use on Desktop</span>
-			<br>
-			<a href="https://colorful-soundscapes.glitch.me/">Visit the live app.</a>
-			<br><br>
-			Press <span class="inline code">Esc</span> to start playing the soundscape. Press <span class="inline code">Enter</span> at least 3 times to add another layer of ambiance. The up and down arrow keys adjust volume. Press the left arrow key to add embellished sounds to the soundscape. Press the right arrow key to generate a new soundscape and color.
-		</div>
+		<span class="h3">To use on Desktop</span>
+		
 
+		<a href="https://colorful-soundscapes.glitch.me/">Visit the live app.</a>
+		<br><br>
+		Press <span class="inline code">Esc</span> to start playing the soundscape. Press <span class="inline code">Enter</span> at least 3 times to add another layer of ambiance. The up and down arrow keys adjust volume. Press the left arrow key to add embellished sounds to the soundscape. Press the right arrow key to generate a new soundscape and color.
+	</div>
+
+	<div class="footer">
 		<hr>
 	  [<a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>]
 		[<a href="https://www.linkedin.com/in/laurenku/" target="_blank">LinkedIn</a>]
@@ -69,5 +72,5 @@
 		<br>
 		<br>
 		<i>Last updated September 25, 2022 by Lauren Kung.</i>
-	</center>
+	</div>
 </html>
