Cleaned up code

--- a/enchantedobjects.html
+++ b/enchantedobjects.html
@@ -29,9 +29,9 @@
 	</div>
 
 	<div class="content" style="text-align:left">
-		<!-- <span class="h1">Enchanted Objects</span> -->
+		<span class="h1">Enchanted Objects</span>
 		<!-- <h1>Enchanted Objects</h1> -->
-		<h1>Enchanted Objects</h1>
+
 		In Enchanted Objects, I’m interested in examining how technologies exist outside of a focus on efficiency, ergonomics, and simplicity and satisfy some fundamental human desires. Through the trials of reviving a Nabaztag (an ambient electronic device that was released on the market in 2006) I engage with a deliberate lack of functionality. Furthermore, I consider the dominant role of cuteness in consumer society by heightening and compromising the cuteness of my Nabaztag.
 		<br><br>
 		This project was supported in part by funding from the Carnegie Mellon University <a href="https://www.cmu.edu/interdisciplinary/programs/" target="_blank">BXA Intercollege Degree Programs</a>.
@@ -110,9 +110,6 @@
 		<span class="h3">Process</span>
 		<image src="./images/sketch1.jpg" width=300></image>
 		<image src="./images/sketch2.jpg" width=300></image>
-
-
-		
 
 	</div>
 
