Temporary header solution

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   </head>
 
   <div class="header">
-    <h2>⌒(•ㅅ•)⌒ Lauren Kung ⌒(•ㅅ•)⌒</h2>
+    <h2>&#x2312;(•ㅅ•)&#x2312; Lauren Kung &#x2312;(•ㅅ•)&#x2312;</h2>
     [<a href="./index.html">Projects</a>]
     [<b>About</b>]
     [<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
