--- a/colorfulsoundscapes.html
+++ b/colorfulsoundscapes.html
@@ -9,16 +9,17 @@
 
   <script>
     var nameCount = 0;
-    names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92; Lauren Kung /(•ㅅ•)&#92;'];
-    // names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92;   Lauren Kung   /(•ㅅ•)&#92;', '(•ㅅ•)    Lauren Kung    (•ㅅ•)'];
+    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
     const interval = setInterval(function() {
       document.getElementById('name').innerHTML = names[nameCount%names.length];
       nameCount++;
     }, 1000);
   </script>
 
-  <div class="header">
-	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
+
+
+  <div class = "header">
+	  <h2 id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</h2>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
@@ -30,7 +31,7 @@
 		
 		Colorful Soundscapes is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of Colorful Soundscapes is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
 		<br><br>
-		This app is hosted on Glitch. <a href="https://glitch.com/edit/#!/colorful-soundscapes">See the project on Glitch</a>.
+		This app is hosted on Glitch. <a href="https://glitch.com/edit/#!/colorful-soundscapes" target="_blank">See the project on Glitch</a>.
 		
 			
 		<hr>
@@ -42,9 +43,9 @@
 		<span class="h3">To use on Google Pixel 4</span>
 		
 		
-		To set up your Google Pixel 4, <a href="https://atap.google.com/soli/sandbox/learn/#tutorial-setup">follow this tutorial on Google ATAP's website</a>.
+		To set up your Google Pixel 4, <a href="https://atap.google.com/soli/sandbox/learn/#tutorial-setup" target="_blank">follow this tutorial on Google ATAP's website</a>.
 		<br><br>
-		Copy this <a href="https://colorful-soundscapes.glitch.me/">URL for the live app</a> to your clipboard.
+		Copy this <a href="https://colorful-soundscapes.glitch.me/" target="_blank">URL for the live app</a> to your clipboard.
 		<br><br>
 		Open the <strong>Soli Sandbox app</strong> > <strong>Menu</strong> > enter the URL in the <strong>“Open URL or file”</strong> field.
 		<br><br>
@@ -55,7 +56,7 @@
 		<span class="h3">To use on Desktop</span>
 		
 
-		<a href="https://colorful-soundscapes.glitch.me/">Visit the live app.</a>
+		<a href="https://colorful-soundscapes.glitch.me/" target="_blank">Visit the live app.</a>
 		<br><br>
 		Press <span class="inline code">Esc</span> to start playing the soundscape. Press <span class="inline code">Enter</span> at least 3 times to add another layer of ambiance. The up and down arrow keys adjust volume. Press the left arrow key to add embellished sounds to the soundscape. Press the right arrow key to generate a new soundscape and color.
 	</div>
