--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
   <script>
     var nameCount = 0;
-    names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92; Lauren Kung /(•ㅅ•)&#92;'];
-    // names = ['￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣', '/(•ㅅ•)&#92;   Lauren Kung   /(•ㅅ•)&#92;', '(•ㅅ•)    Lauren Kung    (•ㅅ•)'];
+    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
     const interval = setInterval(function() {
       document.getElementById('name').innerHTML = names[nameCount%names.length];
       nameCount++;
@@ -35,7 +34,7 @@
 
 
   <div class = "header">
-	  <h2 id='name'>￣(•ㅅ•)￣ Lauren Kung ￣(•ㅅ•)￣</h2>
+	  <h2 id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</h2>
 		[<b>Projects</b>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
